test/cases/compile_errors/minmax_nonnumeric_operand.zig
comptime {
    _ = @min(0, false);
}

// error
// backend=stage2
// target=native
//
// :2:17: error: expected number, found 'bool'
